@@ -158,6 +158,51 @@ argument_list|()
 argument_list|)
 return|;
 block|}
+specifier|public
+specifier|static
+name|Artifact
+name|cloneWithAnotherTypeAndExt
+parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|,
+name|String
+name|newType
+parameter_list|,
+name|String
+name|newExt
+parameter_list|)
+block|{
+return|return
+operator|new
+name|DefaultArtifact
+argument_list|(
+name|artifact
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|,
+name|artifact
+operator|.
+name|getPublicationDate
+argument_list|()
+argument_list|,
+name|artifact
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|newType
+argument_list|,
+name|newExt
+argument_list|,
+name|artifact
+operator|.
+name|getExtraAttributes
+argument_list|()
+argument_list|)
+return|;
+block|}
 name|Date
 name|_publicationDate
 decl_stmt|;
