@@ -19,6 +19,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Arrays
@@ -34,6 +54,18 @@ operator|.
 name|event
 operator|.
 name|EventListenerList
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Artifact
 import|;
 end_import
 
@@ -567,6 +599,62 @@ return|return
 name|getName
 argument_list|()
 return|;
+block|}
+specifier|public
+name|void
+name|put
+parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|,
+name|File
+name|source
+parameter_list|,
+name|String
+name|destination
+parameter_list|,
+name|boolean
+name|overwrite
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|put
+argument_list|(
+name|source
+argument_list|,
+name|destination
+argument_list|,
+name|overwrite
+argument_list|)
+expr_stmt|;
+block|}
+specifier|protected
+name|void
+name|put
+parameter_list|(
+name|File
+name|source
+parameter_list|,
+name|String
+name|destination
+parameter_list|,
+name|boolean
+name|overwrite
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"put in not supported by "
+operator|+
+name|getName
+argument_list|()
+argument_list|)
+throw|;
 block|}
 block|}
 end_class
