@@ -45,6 +45,18 @@ name|List
 import|;
 end_import
 
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Artifact
+import|;
+end_import
+
 begin_comment
 comment|/**  * Represents a collection of resources available to Ivy. Ivy uses one or more  * repositories as both a source of resources for Ivy enabled build systems and  * as a distribution center for resources generated by Ivy enabled build systems.  *</p>  *<p>A repository supports the following fundamental operations  *<ul>  *<li>retrieving a resource from the repository.</li>  *<li>transfering a resource to the repository.</li>  *<li>retrieving a listing of resources.</li>  *</ul>  *</p>  *<h4>Resource Retrieval</h4>  *</p>  *<p>{@link #get} retrieves a resource specified by a provided identifier creating a new file .</p>  *</p>  *<h4>resource Publication</h4>  *</p>  *<p>{@link #put} transfers a file to the repository.  *</p>  *</p>  *<h4>resource Listing</h4>  *</p>  *<p>{@link #list} returns a listing of file like objects  *    belonging to a specified parent directory.</p>  *</p>  */
 end_comment
@@ -77,10 +89,13 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
-comment|/**      * Transfer a resource to the repository      *       * @param source The local file to be transferred.      * @param destination Where to transfer the resource.      * @param overwrite Whether the transfer should overwrite an existing resource.      * @throws IOException On publication failure.      */
+comment|/**      * Transfer a resource to the repository      * @param artifact The artifact to be transferred.      * @param source The local file to be transferred.      * @param destination Where to transfer the resource.      * @param overwrite Whether the transfer should overwrite an existing resource.      *       * @throws IOException On publication failure.      */
 name|void
 name|put
 parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|,
 name|File
 name|source
 parameter_list|,
