@@ -125,6 +125,18 @@ name|jayasoft
 operator|.
 name|ivy
 operator|.
+name|DefaultArtifact
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
 name|Ivy
 import|;
 end_import
@@ -1230,6 +1242,8 @@ argument_list|)
 decl_stmt|;
 name|put
 argument_list|(
+name|artifact
+argument_list|,
 name|src
 argument_list|,
 name|dest
@@ -1258,6 +1272,9 @@ specifier|private
 name|void
 name|put
 parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|,
 name|File
 name|src
 parameter_list|,
@@ -1274,6 +1291,8 @@ name|_repository
 operator|.
 name|put
 argument_list|(
+name|artifact
+argument_list|,
 name|src
 argument_list|,
 name|dest
@@ -1307,6 +1326,8 @@ control|)
 block|{
 name|putChecksum
 argument_list|(
+name|artifact
+argument_list|,
 name|src
 argument_list|,
 name|dest
@@ -1325,6 +1346,9 @@ specifier|private
 name|void
 name|putChecksum
 parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|,
 name|File
 name|src
 parameter_list|,
@@ -1383,6 +1407,24 @@ name|_repository
 operator|.
 name|put
 argument_list|(
+name|DefaultArtifact
+operator|.
+name|cloneWithAnotherTypeAndExt
+argument_list|(
+name|artifact
+argument_list|,
+name|algorithm
+argument_list|,
+name|artifact
+operator|.
+name|getExt
+argument_list|()
+operator|+
+literal|"."
+operator|+
+name|algorithm
+argument_list|)
+argument_list|,
 name|csFile
 argument_list|,
 name|dest
